--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     qtpy
     scikit-image
     motile_toolbox
+    pydantic
 
 python_requires = >=3.8
 include_package_data = True
