--- a/scripts/configs/darts/220510_bsub_degron_rap_single_tube.yaml
+++ b/scripts/configs/darts/220510_bsub_degron_rap_single_tube.yaml
@@ -1,6 +1,9 @@
-data:
+storage:
   data_base_path: "/Volumes/funke/data/darts"
   seg_base_path: "/Volumes/funke/projects/darts/experiments/segmentation"
+  exp_base_path: "~/experiments/motile-napari-plugin"
+
+dataset:
   dataset: "220510_bsub_degron_rap"
   result_names: ["voronoi_otsu_2_1", "voronoi_otsu_4_1", "voronoi_otsu_8_1", "voronoi_otsu_12_1"]
   fov: 5
