Add script to download example hela data

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     motile @ git+https://github.com/funkelab/motile.git@5fdc0247a13a58b5cb49f808daf9d37719481467
     motile_toolbox @ git+https://github.com/funkelab/motile_toolbox.git@4221b06eb1bd1485f709ca62c45482847e5488f7
     pydantic
+    tifffile[all]
 
 python_requires = >=3.8
 include_package_data = True
