Add fonticon dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
     motile_toolbox @ git+https://github.com/funkelab/motile_toolbox.git@4221b06eb1bd1485f709ca62c45482847e5488f7
     pydantic
     tifffile[all]
+    fonticon-fontawesome6
 
 python_requires = >=3.8
 include_package_data = True
