--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     pydantic
     tifffile[all]
     fonticon-fontawesome6
+    pyqtgraph
 
 python_requires = >=3.8
 include_package_data = True
