Update napari.yaml to name widget better

--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -6,10 +6,10 @@ visibility: public
 categories: ["Annotation", "Segmentation", "Acquisition"]
 contributions:
   commands:
-    - id: motile-plugin.make_qwidget
+    - id: motile-plugin.motile_widget
       python_name: motile_plugin.widgets.motile_widget:MotileWidget
       title: "Start the motile widget"
   widgets:
-    - command: motile-plugin.make_qwidget
-      display_name: Example QWidget
+    - command: motile-plugin.motile_widget
+      display_name: Motile Plugin
 
