--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -43,14 +43,22 @@ jobs:
           git clone --depth 1 https://github.com/pyvista/gl-ci-helpers.git
           powershell gl-ci-helpers/appveyor/install_opengl.ps1
 
-      # note: if you need dependencies from conda, considering using
+      # install required conda dependencies
       # setup-miniconda: https://github.com/conda-incubator/setup-miniconda
       # and
       # tox-conda: https://github.com/tox-dev/tox-conda
+      - name: Install conda dependencies
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+            python-version: ${{ matrix.python-version }}
+            # environment-file: conda_config.yml
+            # channel-priority: true
+
+        
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install setuptools tox tox-gh-actions
+          python -m pip install setuptools tox tox-gh-actions tox-conda
 
       # this runs the platform-specific tests declared in tox.ini
       - name: Test with tox
