--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ platform =
     macos: darwin
     linux: linux
     windows: win32
+conda_env = conda_config.yml
 passenv =
     CI
     GITHUB_ACTIONS
