--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -7,13 +7,11 @@ on:
   push:
     branches:
       - main
-      - npe2
     tags:
       - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
   pull_request:
     branches:
       - main
-      - npe2
   workflow_dispatch:
 
 jobs:
@@ -45,31 +43,30 @@ jobs:
 
       # install required conda dependencies
       # setup-miniconda: https://github.com/conda-incubator/setup-miniconda
-      # and
-      # tox-conda: https://github.com/tox-dev/tox-conda
       - name: Install conda dependencies
         uses: conda-incubator/setup-miniconda@v3
         with:
             python-version: ${{ matrix.python-version }}
-            # environment-file: conda_config.yml
-            # channel-priority: true
+            environment-file: conda_config.yml
+            channel-priority: true
 
         
       - name: Install dependencies
+        shell: bash -el {0}  # this is necessary to activate the conda env
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install setuptools tox tox-gh-actions tox-conda
+          pip install ".[dev]"
 
-      # this runs the platform-specific tests declared in tox.ini
-      - name: Test with tox
-        uses: aganders3/headless-gui@v1
-        with:
-          run: python -m tox
-        env:
-          PLATFORM: ${{ matrix.platform }}
+      - name: Test with pytest
+      shell: bash -el {0}
+      run: |
+        pytest -v --color=yes --cov=motile_plugin --cov-report=xml --cov-report=term-missing
+    # Coverage should work out of the box for public repos. For private repos, more setup is likely required.
+    - name: Coverage
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: funkelab/motile_napari_plugin
 
-      - name: Coverage
-        uses: codecov/codecov-action@v3
 
   deploy:
     # this will run when you have tagged a commit, starting with "v*"
