--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.10', '3.11']
 
     steps:
       - uses: actions/checkout@v3
@@ -52,10 +52,10 @@ jobs:
             environment-file: conda_config.yml
             channel-priority: true
       
-      - name: Install dependencies
+      - name: Install pip dependencies
+        shell: bash -el {0}  # this is necessary to activate the conda env
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install setuptools tox tox-gh-actions
+          pip install ".[dev]"
 
       # this runs the platform-specific tests declared in tox.ini
       - name: Test with tox
