Add lxml_html_clean to deal with napari dependencies being broken

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
     tifffile[all]
     fonticon-fontawesome6
     pyqtgraph
+    lxml_html_clean  # only to deal with napari dependencies being broken
 
 python_requires = >=3.8
 include_package_data = True
