Fix tests github action (#25)

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
     tifffile[all]
     fonticon-fontawesome6
     pyqtgraph
+    lxml_html_clean  # only to deal with napari dependencies being broken
 
 python_requires = >=3.8
 include_package_data = True
@@ -58,7 +59,6 @@ napari.manifest =
 
 [options.extras_require]
 testing =
-    tox
     pytest  # https://docs.pytest.org/en/latest/contents.html
     pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
