--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.10', '3.11']
 
     steps:
       - uses: actions/checkout@v3
@@ -45,23 +45,28 @@ jobs:
 
       # note: if you need dependencies from conda, considering using
       # setup-miniconda: https://github.com/conda-incubator/setup-miniconda
-      # and
-      # tox-conda: https://github.com/tox-dev/tox-conda
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install setuptools tox tox-gh-actions
-
-      # this runs the platform-specific tests declared in tox.ini
-      - name: Test with tox
-        uses: aganders3/headless-gui@v1
+      - name: Install conda dependencies
+        uses: conda-incubator/setup-miniconda@v3
         with:
-          run: python -m tox
-        env:
-          PLATFORM: ${{ matrix.platform }}
+            python-version: ${{ matrix.python-version }}
+            environment-file: conda_config.yml
+            channel-priority: true
+      
+      - name: Install pip dependencies
+        shell: bash -el {0}  # this is necessary to activate the conda env
+        run: |
+          pip install ".[testing]"
+
+      - name: Test with pytest
+        shell: bash -el {0}
+        run: |
+          pytest --color=yes --cov=motile_toolbox --cov-report=xml --cov-report=term-missing tests
 
       - name: Coverage
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: funkelab/motile_napari_plugin
 
   deploy:
     # this will run when you have tagged a commit, starting with "v*"
