--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,10 @@ testing =
     napari
     pyqt5
 
+docs =
+    sphinx
+    sphinx-autoapi
+    sphinx_rtd_theme
 
 [options.package_data]
 * = *.yaml
