Depend on released versions of motile and toolbox

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,8 +35,8 @@ install_requires =
     magicgui
     qtpy
     scikit-image
-    motile @ git+https://github.com/funkelab/motile.git@5fdc0247a13a58b5cb49f808daf9d37719481467
-    motile_toolbox @ git+https://github.com/funkelab/motile_toolbox.git@4221b06eb1bd1485f709ca62c45482847e5488f7
+    motile ==0.2.1
+    motile_toolbox ==0.2.3
     pydantic
     tifffile[all]
     fonticon-fontawesome6
