--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -13,14 +13,12 @@ contributions:
     - id: motile-plugin.solve
       python_name: motile_plugin.backend.solve:solve
       title: "Run motile tracking (backend only)"
-      short_title: "Run motile tracking"
     - id: motile-plugin.Fluo_N2DL_HeLa
       python_name: motile_plugin.example_data:Fluo_N2DL_HeLa
-      title: "Run motile tracking (backend only)"
-      short_title: "Run motile tracking"
+      title: "Load Fluo-N2DL-HeLa tracking dataset"
   widgets:
     - command: motile-plugin.motile_widget
-      display_name: Motile Plugin
+      display_name: Motile Tracking
   sample_data:
     - command: motile-plugin.Fluo_N2DL_HeLa
       key: "Fluo-N2DL-HeLa"
