--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,15 @@
-# This workflows will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
 name: tests
 
 on:
   push:
-    branches:
-      - main
-      - npe2
-    tags:
-      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
-  pull_request:
-    branches:
-      - main
-      - npe2
+    branches: [main]
+    tags: ["v*"] # Push events to matching v*, i.e. v1.0, v20.15.10
+  pull_request: {}
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -23,7 +18,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.10', '3.11']
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -33,27 +28,22 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # these libraries enable testing on Qt on linux
-      - uses: tlambert03/setup-qt-libs@v1
-
-      # strategy borrowed from vispy for installing opengl libs on windows
-      - name: Install Windows OpenGL
-        if: runner.os == 'Windows'
-        run: |
-          git clone --depth 1 https://github.com/pyvista/gl-ci-helpers.git
-          powershell gl-ci-helpers/appveyor/install_opengl.ps1
+      # these libraries enable testing on Qt on linux and OpenGL on Windows
+      - uses: pyvista/setup-headless-display-action@v2
+        with:
+          qt: true
 
       # note: if you need dependencies from conda, considering using
       # setup-miniconda: https://github.com/conda-incubator/setup-miniconda
       - name: Install conda dependencies
         uses: conda-incubator/setup-miniconda@v3
         with:
-            python-version: ${{ matrix.python-version }}
-            environment-file: conda_config.yml
-            channel-priority: true
+          python-version: ${{ matrix.python-version }}
+          environment-file: conda_config.yml
+          channel-priority: true
 
       - name: Install pip dependencies
-        shell: bash -el {0}  # this is necessary to activate the conda env
+        shell: bash -el {0} # this is necessary to activate the conda env
         run: |
           pip install ".[testing]"
 
