--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,59 @@
 requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "motile-plugin"
+dynamic = ["version"]
+description = "Tracking with motile"
+readme = "README.md"
+license = { text = "BSD 3-Clause License" }
+requires-python = ">=3.10"
+authors = [
+    { name = "Caroline Malin-Mayor", email = "malinmayorc@janelia.hhmi.org" },
+]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Framework :: napari",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering :: Image Processing",
+]
+dependencies = [
+    "fonticon-fontawesome6",
+    "lxml_html_clean",        # only to deal with napari dependencies being broken
+    "magicgui",
+    "motile >=0.2.1",
+    "motile_toolbox >=0.2.5",
+    "napari[all]",
+    "numpy",
+    "pydantic",
+    "pyqtgraph",
+    "qtpy",
+    "scikit-image",
+    "tifffile[all]",
+]
+
+[project.optional-dependencies]
+testing = ["napari", "pyqt5", "pytest", "pytest-cov", "pytest-qt"]
+docs = ["myst-parser", "sphinx", "sphinx-autoapi", "sphinx_rtd_theme"]
+
+[project.entry-points."napari.manifest"]
+motile-plugin = "motile_plugin:napari.yaml"
+
+[project.urls]
+"Bug Tracker" = "https://github.com/funkelab/motile-napari-plugin/issues"
+Documentation = "https://github.com/funkelab/motile-napari-plugin#README.md"
+Homepage = "https://github.com/funkelab/motile-napari-plugin"
+"Source Code" = "https://github.com/funkelab/motile-napari-plugin"
+"User Support" = "https://github.com/funkelab/motile-napari-plugin/issues"
+
+
 [tool.setuptools_scm]
 
 [tool.black]
@@ -37,22 +90,25 @@ target-version = "py38"
 fix = true
 
 select = [
-    "E", "F", "W", #flake8
-    "UP", # pyupgrade
-    "I", # isort
+    "E",
+    "F",
+    "W",   #flake8
+    "UP",  # pyupgrade
+    "I",   # isort
     "BLE", # flake8-blind-exception
-    "B", # flake8-bugbear
-    "A", # flake8-builtins
-    "C4", # flake8-comprehensions
+    "B",   # flake8-bugbear
+    "A",   # flake8-builtins
+    "C4",  # flake8-comprehensions
     "ISC", # flake8-implicit-str-concat
-    "G", # flake8-logging-format
+    "G",   # flake8-logging-format
     "PIE", # flake8-pie
     "SIM", # flake8-simplify
 ]
 
 ignore = [
-    "E501", # line too long. let black handle this
-    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
+    "E501",   # line too long. let black handle this
+    "UP006",
+    "UP007",  # type annotation. As using magicgui require runtime type annotation then we disable this.
     "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
 ]
 
