--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
+requires = ["setuptools>=70", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -57,38 +57,13 @@ Homepage = "https://github.com/funkelab/motile-napari-plugin"
 
 [tool.setuptools_scm]
 
-[tool.black]
-line-length = 79
-target-version = ['py38', 'py39', 'py310']
 
 [tool.ruff]
 line-length = 79
-
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".mypy_cache",
-    ".pants.d",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-    "*vendored*",
-    "*_vendor*",
-]
-
-target-version = "py38"
+target-version = "py310"
 fix = true
 
+[tool.ruff.lint]
 select = [
     "E",
     "F",
@@ -104,13 +79,18 @@ select = [
     "PIE", # flake8-pie
     "SIM", # flake8-simplify
 ]
-
 ignore = [
     "E501",   # line too long. let black handle this
     "UP006",
     "UP007",  # type annotation. As using magicgui require runtime type annotation then we disable this.
     "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
 ]
+
+[tool.ruff.lint.per-file-ignores]
+"scripts/*.py" = ["F"]
+
+# https://docs.astral.sh/ruff/formatter/
+[tool.ruff.format]
 
 [tool.mypy]
 ignore_missing_imports = true
