Exchange tracks layer for existing graph layer and thickness slider

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ project_urls =
 packages = find:
 install_requires =
     napari[all]
-    numpy
+    numpy<2
     magicgui
     qtpy
     scikit-image
@@ -42,6 +42,7 @@ install_requires =
     fonticon-fontawesome6
     pyqtgraph
     lxml_html_clean  # only to deal with napari dependencies being broken
+    zarr
 
 python_requires = >=3.10
 include_package_data = True
