--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -7,11 +7,11 @@ categories: ["Utilities"]
 contributions:
   commands:
     - id: motile-plugin.motile_widget
-      python_name: motile_plugin.widgets.motile_widget:MotileWidget
+      python_name: motile_plugin.widgets.motile.motile_widget:MotileWidget
       title: "Start the motile widget"
       short_title: "motile widget"
     - id: motile-plugin.tree_widget
-      python_name: motile_plugin.widgets.tree_widget:TreeWidget
+      python_name: motile_plugin.widgets.tracks_view.tree_widget:TreeWidget
       title: "Open the lineage view widget"
       short_title: "lineage view"
     - id: motile-plugin.solve
