use motile >= 0.3 and update solver

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     magicgui
     qtpy
     scikit-image
-    motile < 0.3
+    motile >= 0.3
     motile_toolbox >=0.2.5
     pydantic
     tifffile[all]
