--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,8 @@ select = [
 
 ignore = [
     "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
-    "ISC001", # implicit string concatenation
+    "ISC001", # implicit string concatenation    
+    "E501", # line too long
 ]
 
 [tool.ruff.lint.per-file-ignores]
