put the combined widget at the top of the list in the napari.yaml

--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -6,6 +6,10 @@ visibility: public
 categories: ["Utilities"]
 contributions:
   commands:
+    - id: motile-plugin.multi_widget
+      python_name: motile_plugin.data_views.menus.multi_widget:MultiWidget
+      title: "Open combined motile widgets"
+      short_title: "multi widget"
     - id: motile-plugin.motile_widget
       python_name: motile_plugin.motile.menus.motile_widget:MotileWidget
       title: "Start the motile widget"
@@ -18,13 +22,9 @@ contributions:
       python_name: motile_plugin.data_views.menus.editing_menu:EditingMenu
       title: "Edit tracks"
       short_title: "edit tracks"
-    - id: motile-plugin.multi_widget
-      python_name: motile_plugin.data_views.menus.multi_widget:MultiWidget
-      title: "Motile Multi Widget"
-      short_title: "multi widget"
     - id: motile-plugin.track_list
       python_name: motile_plugin.data_views.views_coordinator.tracks_list:TrackListWidget
-      title: "Track List"
+      title: "Show track list"
       short_title: "track list widget"
     - id: motile-plugin.solve
       python_name: motile_plugin.motile.backend.solve:solve
@@ -33,14 +33,14 @@ contributions:
       python_name: motile_plugin.example_data:Fluo_N2DL_HeLa
       title: "Load Fluo-N2DL-HeLa tracking dataset"
   widgets:
+    - command: motile-plugin.multi_widget
+      display_name: Combined Motile Widgets
     - command: motile-plugin.motile_widget
       display_name: Motile Tracking
     - command: motile-plugin.tree_widget
       display_name: Lineage View
     - command: motile-plugin.editing_menu
       display_name: Edit tracks
-    - command: motile-plugin.multi_widget
-      display_name: Multi Widget
     - command: motile-plugin.track_list
       display_name: Track List
   sample_data:
