--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -32,6 +32,9 @@ contributions:
     - id: motile-plugin.Fluo_N2DL_HeLa
       python_name: motile_plugin.example_data:Fluo_N2DL_HeLa
       title: "Load Fluo-N2DL-HeLa tracking dataset"
+    - id: motile-plugin.Fluo_N2DL_HeLa_crop
+      python_name: motile_plugin.example_data:Fluo_N2DL_HeLa_crop
+      title: "Load Fluo-N2DL-HeLa tracking dataset (crop)"
     - id: motile-plugin.Mouse_Embryo_Membrane
       python_name: motile_plugin.example_data:Mouse_Embryo_Membrane
       title: "Load Mouse Embryo_Membrane tracking dataset"
@@ -50,6 +53,9 @@ contributions:
     - command: motile-plugin.Fluo_N2DL_HeLa
       key: "Fluo-N2DL-HeLa"
       display_name: "Fluo-N2DL-HeLa (2D)"
+    - command: motile-plugin.Fluo_N2DL_HeLa_crop
+      key: "Fluo-N2DL-HeLa-crop"
+      display_name: "Fluo-N2DL-HeLa crop (2D)"
     - command: motile-plugin.Mouse_Embryo_Membrane
       key: "Mouse_Embryo_Membrane"
       display_name: "Mouse Embryo Membranes (3D)"
