--- a/src/motile_plugin/napari.yaml
+++ b/src/motile_plugin/napari.yaml
@@ -6,26 +6,15 @@ visibility: public
 categories: ["Utilities"]
 contributions:
   commands:
-    - id: motile-plugin.multi_widget
-      python_name: motile_plugin.data_views.menus.multi_widget:MultiWidget
-      title: "Open Motile Main Widget"
-      short_title: "multi widget"
-    - id: motile-plugin.motile_widget
-      python_name: motile_plugin.motile.menus.motile_widget:MotileWidget
-      title: "Start the motile widget"
-      short_title: "motile widget"
+    - id: motile-plugin.main_app
+      python_name: motile_plugin.application_menus.main_app:MainApp
+      title: "Open the motile main application"
     - id: motile-plugin.tree_widget
       python_name: motile_plugin.data_views.views.tree_view.tree_widget:TreeWidget
       title: "Open the lineage view widget"
-      short_title: "lineage view"
-    - id: motile-plugin.editing_menu
-      python_name: motile_plugin.data_views.menus.editing_menu:EditingMenu
-      title: "Edit tracks"
-      short_title: "edit tracks"
-    - id: motile-plugin.track_list
-      python_name: motile_plugin.data_views.views_coordinator.tracks_list:TrackListWidget
-      title: "Show track list"
-      short_title: "track list widget"
+    - id: motile-plugin.menus_widget
+      python_name: motile_plugin.application_menus.menu_widget:MenuWidget
+      title: "Open the motile menus widget"
     - id: motile-plugin.solve
       python_name: motile_plugin.motile.backend.solve:solve
       title: "Run motile tracking (backend only)"
@@ -39,16 +28,12 @@ contributions:
       python_name: motile_plugin.example_data:Mouse_Embryo_Membrane
       title: "Load Mouse Embryo_Membrane tracking dataset"
   widgets:
-    - command: motile-plugin.multi_widget
+    - command: motile-plugin.main_app
       display_name: Motile Main Widget
-    - command: motile-plugin.motile_widget
-      display_name: Motile Tracking
+    - command: motile-plugin.menus_widget
+      display_name: Motile Menus Widget
     - command: motile-plugin.tree_widget
-      display_name: Lineage View
-    - command: motile-plugin.editing_menu
-      display_name: Edit tracks
-    - command: motile-plugin.track_list
-      display_name: Track List
+      display_name: Motile Lineage View
   sample_data:
     - command: motile-plugin.Fluo_N2DL_HeLa
       key: "Fluo-N2DL-HeLa"
