--- a/src/motile_tracker/napari.yaml
+++ b/src/motile_tracker/napari.yaml
@@ -1,4 +1,4 @@
-name: motile-plugin
+name: motile-tracker
 display_name: Motile
 # use 'hidden' to remove plugin from napari hub search results
 visibility: public
@@ -6,41 +6,41 @@ visibility: public
 categories: ["Utilities"]
 contributions:
   commands:
-    - id: motile-plugin.main_app
-      python_name: motile_plugin.application_menus.main_app:MainApp
+    - id: motile-tracker.main_app
+      python_name: motile_tracker.application_menus.main_app:MainApp
       title: "Open the motile main application"
-    - id: motile-plugin.tree_widget
-      python_name: motile_plugin.data_views.views.tree_view.tree_widget:TreeWidget
+    - id: motile-tracker.tree_widget
+      python_name: motile_tracker.data_views.views.tree_view.tree_widget:TreeWidget
       title: "Open the lineage view widget"
-    - id: motile-plugin.menus_widget
-      python_name: motile_plugin.application_menus.menu_widget:MenuWidget
+    - id: motile-tracker.menus_widget
+      python_name: motile_tracker.application_menus.menu_widget:MenuWidget
       title: "Open the motile menus widget"
-    - id: motile-plugin.solve
-      python_name: motile_plugin.motile.backend.solve:solve
+    - id: motile-tracker.solve
+      python_name: motile_tracker.motile.backend.solve:solve
       title: "Run motile tracking (backend only)"
-    - id: motile-plugin.Fluo_N2DL_HeLa
-      python_name: motile_plugin.example_data:Fluo_N2DL_HeLa
+    - id: motile-tracker.Fluo_N2DL_HeLa
+      python_name: motile_tracker.example_data:Fluo_N2DL_HeLa
       title: "Load Fluo-N2DL-HeLa tracking dataset"
-    - id: motile-plugin.Fluo_N2DL_HeLa_crop
-      python_name: motile_plugin.example_data:Fluo_N2DL_HeLa_crop
+    - id: motile-tracker.Fluo_N2DL_HeLa_crop
+      python_name: motile_tracker.example_data:Fluo_N2DL_HeLa_crop
       title: "Load Fluo-N2DL-HeLa tracking dataset (crop)"
-    - id: motile-plugin.Mouse_Embryo_Membrane
-      python_name: motile_plugin.example_data:Mouse_Embryo_Membrane
+    - id: motile-tracker.Mouse_Embryo_Membrane
+      python_name: motile_tracker.example_data:Mouse_Embryo_Membrane
       title: "Load Mouse Embryo_Membrane tracking dataset"
   widgets:
-    - command: motile-plugin.main_app
+    - command: motile-tracker.main_app
       display_name: Motile Main Widget
-    - command: motile-plugin.menus_widget
+    - command: motile-tracker.menus_widget
       display_name: Motile Menus Widget
-    - command: motile-plugin.tree_widget
+    - command: motile-tracker.tree_widget
       display_name: Motile Lineage View
   sample_data:
-    - command: motile-plugin.Fluo_N2DL_HeLa
+    - command: motile-tracker.Fluo_N2DL_HeLa
       key: "Fluo-N2DL-HeLa"
       display_name: "Fluo-N2DL-HeLa (2D)"
-    - command: motile-plugin.Fluo_N2DL_HeLa_crop
+    - command: motile-tracker.Fluo_N2DL_HeLa_crop
       key: "Fluo-N2DL-HeLa-crop"
       display_name: "Fluo-N2DL-HeLa crop (2D)"
-    - command: motile-plugin.Mouse_Embryo_Membrane
+    - command: motile-tracker.Mouse_Embryo_Membrane
       key: "Mouse_Embryo_Membrane"
       display_name: "Mouse Embryo Membranes (3D)"
