--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,10 +50,10 @@ jobs:
       - name: Test with pytest
         shell: bash -el {0}
         run: |
-          pytest --color=yes --cov=motile-napari-plugin --cov-report=xml --cov-report=term-missing tests
+          pytest --color=yes --cov=motile-tracker --cov-report=xml --cov-report=term-missing tests
 
       - name: Coverage
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: funkelab/motile-napari-plugin
+          slug: funkelab/motile-tracker
